# Winit-WGPU-renderer

./: .gitignore  Cargo.toml  README.md  test.rs
examples/: assets_loader.rs  camera2.rs  camera_fly.rs  camera_fpv.rs  camera_light.rs  cube.rs  cube_transform.rs  floor.rs  floor_skay.rs  gui.rs  gui2.rs  gui_raw.rs  raycast.rs  renderer_window_manager.rs  simple_app.rs  skay.rs  triangle.rs
examples/assets/: sphere-mirror-4k-materialtest.glb
examples/assets/pyramid/: license.txt
examples/examples_shaders/: cube.wgsl  cube_copy.wgsl  test.wgsl  textured_cube.wgsl
examples/shaders/: cube.wgsl  cube_camera.wgsl  cube_camera_rotate.wgsl  simple_app.wgsl  test_light_camera.wgsl
shaders/: camera.wgsl  cube.wgsl  floor.wgsl  light.wgsl  main.wgsl  scaybox.wgsl  skybox.wgsl  triangle.wgsl
shaders/raycast/: noize.wgsl  raytracer.wgsl  uniform_textures.wgsl
src/: lib.rs  main.rs
src/controll/: camera.rs  fly_camera.rs  mod.rs
src/controll/camera/: fly_camera.rs  fpv_camera.rs  mod.rs  raycast_camera.rs
src/core/: app.rs  mod.rs  renderer.rs  test.rs  window.rs
src/core/raytracer/: mod.rs  raytracer.wgsl  sky.rs  texture.rs
src/gui/: fps.rs  mod.rs
src/math/: angle.rs  mod.rs  sphere.rs
src/res/: animation.rs  asset.rs  asset_manager.rs  buffer.rs  camera.rs  image.rs  material.rs  mesh.rs  mod.rs  model.rs  scene.rs  storage.rs  test.rs  texture.rs  vertex.rs
src/res/texture/: gpu_buffers.rs  gpu_texture.rs  mod.rs
src/scene/: camera.rs  entity.rs  light.rs  mod.rs  object.rs  transform.rs  uniform.rs
src/shaders/: cube.wgsl
test_assets/: tesseract_cube.glb
