[package]
name = "diploma_thesis"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "25.0.0"
pollster = "0.4.0"  
winit = "0.29.12"
env_logger = "0.11.8"  
bytemuck = { version = "1.23.0", features = ["derive"] }  
glam = "0.30.3" 
winit_input_helper = "0.16.0"
gltf = "1.4.1"  
image = "0.25.6" 
slotmap = "1.0.7"
serde = "1.0.219"

[dev-dependencies]
approx = "0.5"  
rstest = "0.18" 
tempfile = "3.3"
png = "0.17" 
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"  


# [target.'cfg(target_arch = "wasm32")'.dependencies]
# wgpu = { version = "0.15", features = ["webgl"] }

