[package]
name = "diploma_thesis"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "25.0.2"
pollster = "0.4.0"  
env_logger = "0.11.8"  
bytemuck = { version = "1.23.1", features = ["derive"] }  
glam = { version = "0.30.4"}
winit_input_helper = "0.16.0"
gltf = "1.4.1"  
image = "0.25.6" 
slotmap = "1.0.7"
serde = "1.0.219"
hw-skymodel = "0.1.1"


winit = "0.29.12"
# imgui = "^0.11.0"
# imgui-wgpu = "0.25.0"
# imgui-winit-support = "^0.11.0"
nalgebra-glm = { version = "0.18.0", features = ["convert-bytemuck"] }
thiserror = "1.0.40"

[dev-dependencies]
approx = "0.5"  
tempfile = "3.3"
png = "0.17" 
tokio = { version = "1.45.1", features = ["full"] }
futures = "0.3" 

rstest = "0.18" 




